# algotrading-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/integrations/: telegram_handler.py
tests/: test_backtesting.py
